syntax = "proto3";
import "pricing.proto";
import "catalog.proto";
import "asset.proto";
import "PagoProgramAvailability.proto";
import "AdsPolicy.proto";
import "EPGChannelProgrammeObject.proto";

option csharp_namespace = "phoenix";
option go_package = "./models";

package phoenix;

message IsServiceAllowedRequest {

  int32 groupId = 1;
  int64 domainId = 2;
  service Service = 3;

  enum service
  {
    Unknown = 0;
    CatchUp = 1;
    StartOver = 2;
    NPVR = 3;
    Download = 4;
    AdsControl = 5;
  }

}

message AdsControlData {
  int32 FileId = 1;
  string FileType = 2;
  string AdsParam = 3;
  AdsPolicy AdsPolicy = 4;
}

message GetDomainAdsControlRequest {
  int32 groupId = 1;
  int64 domainId = 2;
}
message  GetDomainAdsControlResponse{
  AdsControlData AdsControlData = 1;
}

message GetPPVModuleDataRequest {
  int32 GroupId = 1;
  string sPPVCode = 2;
  string udid = 3;
}

message GetPPVModuleDataResponse{
  AdsControlData AdsControlData = 1;
}

message HandlePlayUsesRequest{
  int32 groupId = 1;
  MediaFileEntitlementContainer price = 2;
  int64 userId = 3;
  int32 mediaFileId = 4; 
  string ip = 5;
  string countryCode = 6; 
  string languageCode = 7; 
  string udid = 8; 
  string couponCode = 9; 
  int64 domainId = 10;
  bool isLive = 11;
  PagoProgramAvailability pagoProgramAvailability = 12;
}

message CheckProgramAssetGroupExistenceRequest{
  int32 groupId = 1;
}

message GetEntitledPagoWindowRequest{
  int32 groupId = 1; 
  int32 domainId = 2;
  int32 assetId = 3;
  eAssetTypes assetType = 4;
  repeated MediaFile files = 5; 
  EPGChannelProgrammeObject EpgProgram = 6;
}

message GetEntitledPagoWindowResponse{
  PagoProgramAvailability pagoResponse = 1;
}